[project]
name = "flask-example"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flask>=3.1.3",
]

[dependency-groups]
dev = [
    "bandit>=1.9.4",
    "black>=26.1.0",
    "flake8>=7.3.0",
    "isort>=8.0.1",
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "safety>=3.7.0",
]
